Fixed bug so you can actaully install it with npm

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Anton Myrberg",
   "license": "ISC",
   "bin": {
-    "weather": "./app.js"
+    "weather": "./app-promise.js"
   },
   "dependencies": {
     "axios": "^0.16.1",
